--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -36,11 +36,13 @@
 					<form method="post" action="../employee/list.html" th:action="@{/login}" th:object="${loginForm}">
 						<fieldset>
 							<legend>ログイン</legend>
-							<div class="form-group">
-								<div class="alert alert-danger">
+							
+							<div class="form-group" th:if="${err}!=null">
+								<div class="alert alert-danger"   th:text="${errMessage}">
 									<p>メールアドレスまたはパスワードが間違っています</p>
 								</div>
 							</div>
+							
 							<div class="form-group">
 								<label for="mailAddress">メールアドレス:</label> <input type="text"
 									name="mailAddress" id="mailAddress" class="form-control"
