追加課題　未入力チェックとメールアドレス重複チェック

--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -41,9 +41,9 @@
 										<label for="name">
 											氏名:
 										</label>
-										<label class="error-messages">
+										<div class="error-messages" th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color:red">
 											氏名を入力してください
-										</label>
+										</div>
 										<input type="text" name="name" id="name" class="form-control" placeholder="山田太郎" th:field="*{name}">
 									</div>
 								</div>
@@ -55,9 +55,11 @@
 										<label for="mailAddress">
 											メールアドレス:
 										</label>
-										<label  class="error-messages">
+										<div  class="error-messages" th:if="${err}!=null" th:text="${errMessage}" >
 											メールアドレスを入力してください
-										</label>
+										</div>
+										<div th:if="${#fields.hasErrors('mailAddress')}" th:errors="*{mailAddress}" style="color:red">
+										</div>
 										<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="yamada@mail.com" th:field="*{mailAddress}">
 									</div>
 								</div>
@@ -68,10 +70,10 @@
 									<div class="col-sm-12">
 										<label for="passwaord">
 											パスワード:
-										</label>
-										<label class="error-messages">
+										</label>										
+										<div class="error-messages" th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color:red">
 											パスワードを入力してください
-										</label>
+										</div>										
 										<input type="password" name="password" id="password" class="form-control" placeholder="password" th:field="*{password}">
 									</div>
 								</div>
