--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -115,11 +115,11 @@
 								</tr>
 								<tr>
 									<th nowrap>扶養人数</th>
-									<td><label class="error-messages"> 扶養人数を入力してください </label>
+									<td><!--<label class="error-messages""> 扶養人数を入力してください </label>-->
 										<label class="control-label" style="color: red"
 										for="dependentsCount"></label> <input type="hidden" name="id" th:value="${employee.id}">
-										<input type="text" name="dependentsCount" id="dependentsCount"
-										class="form-control" th:value="${employee.dependentsCount}" th:field="*{dependentsCount}"></td>
+										<input type="text" name="dependentsCount" id="dependentsCount" class="form-control" th:value="${employee.dependentsCount}"> <!-- th:field="*{dependentsCount}" -->
+									</td>
 								</tr>
 							</table>
 							<button type="submit" class="btn btn-primary">更新</button>
